<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.spectratech.spectraui.MainActivity">

    <item
        android:id="@+id/bottom_nav_tab1"
        android:icon="@drawable/ic_baseline_attach_money_24"
        android:orderInCategory="100"
        android:title="@string/label_bottom_nav_tab1"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bottom_nav_tab2"
        android:icon="@drawable/ic_baseline_catching_pokemon_24"
        android:orderInCategory="100"
        android:title="@string/label_bottom_nav_tab2"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bottom_nav_tab3"
        android:icon="@drawable/ic_baseline_cloud_download_24"
        android:orderInCategory="100"
        android:title="@string/label_bottom_nav_tab3"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bottom_nav_tab4"
        android:icon="@drawable/ic_baseline_more_horiz_24"
        android:orderInCategory="100"
        android:title="@string/label_bottom_nav_tab4"
        app:showAsAction="ifRoom" />

</menu>
